# clarus

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: routes.py
app/templates/: base.html  index.html
app/utils/: rag.py
